# sorsalosh

./: .replit  config.py  main.py  pasted_text_1725829014657.txt  pyproject.toml
adapter/: advanced_adapter.py  context_aware_generation.py  memory_management.py  multi_gpu_utils.py  semantic_understanding.py
language_modules/: cpp_module.py  go_module.py  java_module.py  javascript_module.py  python_module.py  ruby_module.py
utils/: code_style_control.py  error_handling.py
